[package]
name = "alchem-macros"
version = "0.1.1"
authors = ["Charlie Ozinga <ozchaz@gmail.com>"]
edition = "2018"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dev-dependencies.alchem]
version = "0.1"
git = "https://github.com/chaaz/alchem"
branch = "main"

[dev-dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros", "time"]

[lib]
proc-macro = true
